<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_to_cybersafety_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cybersafetyapp.WelcomeToCybersafetyApp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textview_welcome_text1" />

    <TextView
        android:text="@string/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textview_welcome_text2"
        android:layout_below="@+id/textview_welcome_text1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/welcome_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_welcome_text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/textview_welcome_text3" />

    <TextView
        android:text="@string/welcome_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_welcome_text3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textview_welcome_text4" />

    <Button
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/button_login"
        android:layout_marginRight="56dp"
        android:layout_marginEnd="56dp"
        android:layout_below="@+id/button_register"
        android:layout_alignRight="@+id/textview_welcome_text2"
        android:onClick="buttonOnClickLogIn"
        android:layout_alignEnd="@+id/textview_welcome_text2" />

    <Button
        android:text="@string/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/button_register"
        android:layout_below="@+id/textview_welcome_text4"
        android:layout_alignLeft="@+id/button_login"
        android:onClick="buttonOnClickRegister"
        android:layout_alignStart="@+id/button_login" />

    <Button
        android:text="@string/button_aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignStart="@+id/button_login"
        android:layout_marginTop="38dp"
        android:onClick="buttonOnClickAboutUs"
        android:id="@+id/button_aboutus" />
</RelativeLayout>
