<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cybersafetyapp.Dashboard">


    <TextView
        android:text="@string/textview_dashboard_check_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button_dashboard_check_notifications"
        android:layout_alignStart="@+id/button_dashboard_check_notifications"
        android:layout_marginTop="27dp"
        android:id="@+id/textview_dashboard_check_notifications" />

    <Button
        android:text="@string/button_dashboard_check_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:id="@+id/button_dashboard_check_notifications"
        android:layout_below="@+id/textview_dashboard_check_notifications"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonOnclickCheckNotifications"/>

    <TextView
        android:text="@string/textview_dashboard_add_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dashboard_check_notifications"
        android:layout_alignLeft="@+id/button_dashboard_check_notifications"
        android:layout_alignStart="@+id/button_dashboard_check_notifications"
        android:layout_marginTop="55dp"
        android:id="@+id/textview_dashboard_add_new_account" />

    <Button
        android:text="@string/button_dashboard_add_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_dashboard_add_new_account"
        android:layout_alignLeft="@+id/textview_dashboard_add_new_account"
        android:layout_alignStart="@+id/textview_dashboard_add_new_account"
        android:layout_marginTop="15dp"
        android:id="@+id/button_dashboard_add_new_account"
        android:onClick="buttonOnClickAddNewProfile"/>

    <TextView
        android:text="@string/textview_dashboard_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dashboard_add_new_account"
        android:layout_alignLeft="@+id/button_dashboard_add_new_account"
        android:layout_alignStart="@+id/button_dashboard_add_new_account"
        android:layout_marginTop="51dp"
        android:id="@+id/textview_dashboard_edit_profile" />

    <Button
        android:text="@string/button_dashboard_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_dashboard_edit_profile"
        android:layout_alignLeft="@+id/textview_dashboard_edit_profile"
        android:layout_alignStart="@+id/textview_dashboard_edit_profile"
        android:layout_marginTop="22dp"
        android:id="@+id/button_dashboard_edit_profile"
        android:onClick="buttonOnClickEditProfile"/>
</RelativeLayout>
