<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cybersafetyapp.ActivityPackage.Register">

    <TextView
        android:text="@string/textview_register_emailid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/textview_register_emailid" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textview_register_emailid"
        android:layout_toEndOf="@+id/textview_register_emailid"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="23dp"
        android:id="@+id/edittext_register_emailid" />

    <TextView
        android:text="@string/textview_register_emailid_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_register_emailid_confirmation"
        android:layout_alignBottom="@+id/edittext_register_email_confirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:id="@+id/edittext_register_email_confirmation"
        android:layout_below="@+id/edittext_register_emailid"
        android:layout_toRightOf="@+id/textview_register_emailid_confirmation"
        android:layout_toEndOf="@+id/textview_register_emailid_confirmation"
        android:layout_marginTop="18dp" />

    <TextView
        android:text="@string/textview_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_register_emailid_confirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp"
        android:id="@+id/textview_register_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textview_register_emailid_confirmation"
        android:layout_alignLeft="@+id/edittext_register_emailid"
        android:layout_alignStart="@+id/edittext_register_emailid"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="43dp"
        android:id="@+id/edittext_register_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_register_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:text="@string/textview_register_password_confirmation"
        android:id="@+id/textview_register_password_confirmation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/edittext_register_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:id="@+id/edittext_register_password_confirmation" />

    <TextView
        android:text="@string/textview_register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_register_password_confirmation"
        android:layout_marginTop="41dp"
        android:id="@+id/textview_register_phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/edittext_register_password_confirmation"
        android:layout_toRightOf="@+id/textview_register_emailid_confirmation"
        android:layout_toEndOf="@+id/textview_register_emailid_confirmation"
        android:layout_marginTop="26dp"
        android:id="@+id/edittext_register_phone" />

    <Button
        android:text="@string/button_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edittext_register_email_confirmation"
        android:layout_alignStart="@+id/edittext_register_email_confirmation"
        android:layout_marginBottom="33dp"
        android:id="@+id/button2"
        android:onClick="buttonOnClickRegister"/>
</RelativeLayout>
